--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,7 +16,7 @@
                 <section id="Menu">
                     <ul>
                         <a href="index.html">INICIO</a>
-                        <a href="#">RESULTADOS</a>
+                        <a href="Resultados.html">RESULTADOS</a>
                         <a href="Contactanos.html">CONTACTO</a>
                         
                     </ul>
