--- a/public_html/Contactanos.html
+++ b/public_html/Contactanos.html
@@ -17,7 +17,7 @@
                 <section id="Menu">
                     <ul>
                         <a href="index.html">INICIO</a>
-                        <a href="#">RESULTADOS</a>
+                        <a href="Resultados.html">RESULTADOS</a>
                         <a href="Contactanos.html">CONTACTO</a>
                     </ul>
                 </section>
